# dragonframe-bg-switcher

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-hatch.yml
src/dragonframe_bg_switcher/: __about__.py  __init__.py.orig  cli.py  event_receiver.py  image_server.py  server.py  switcher.py
